[project]
name = "eg-247-textbook"
version = "0.1.0"
description = "Interactive jupyter textbook with MATLAB kernel, jupytext and jupyter-book"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ghp-import>=2.1.0",
    "jupyter>=1.1.1",
    "jupyter-book>=1.0.3",
    "jupytext>=1.16.6",
    "matplotlib>=3.10.0",
    "mkernel>=0.2.0",
    "mystmd>=1.3.23",
    "nbclassic>=1.2.0",
    "notebook>=7.3.2",
    "pip>=25.0",
    "pytest>=8.3.4",
    "rise==5.7.1",
    "scipy>=1.15.1",
    "sympy>=1.13.3",
]

[tool.uv.sources]
mkernel = { git = "https://github.com/allefeld/mkernel.git" }
